--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,39 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="static/style.css" />
+{% extends 'base.tpl' %}
 
-    <title>{{ title }}</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="my-5">
-        <h1>Hello, World</h1>
-      </div>
+{% block content %}
+{{ super() }}
 
-      {% if msg %}
-      <div class="my-3">
-        <h3>{{ msg }}</h3>
-      </div>
-      {% endif %} 
-      
-      {% if arr %}
-      <div class="my-3">
-        <ul>
-          {% for el in arr %}
-          <li>{{ el }}</li>
-          {% endfor %}
-        </ul>
-      </div>
-      {% endif %}
-    </div>
-  </body>
-</html>
+  {% if title %}
+  <h1> {{ title }} </h1>
+  {% else %}
+  <h1> Default title </h1>
+  {% endif %}
+
+  {% if msg %}
+  <div class="my-3">
+    <h3>{{ msg }}</h3>
+  </div>
+  {% endif %} 
+
+  {% if arr %}
+  <div class="my-3">
+    <ul>
+      {% for el in arr %}
+      <li>{{ el }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+
+  <button 
+    type="button" 
+    class="btn btn-primary"
+    onclick="to_reg()"
+  >Go to reg :)</button>
+
+{% endblock %}
