--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -35,11 +35,36 @@ body {
 
 .container {
   position: absolute;
-  top: 35%;
+  top: 3em;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
   max-width: 75em;
   max-height: 85em;
   width: auto;
   height: auto;
+}
+
+.sign-in-btn {
+  border: auto;
+  width: auto;
+}
+
+.small-pwd {
+  font-size: 0.7em;
+}
+
+.flash-msg {
+  text-align: center;
+  padding: 0.1em;
+  border-radius: 3em;
+}
+
+.flash-msg.message {
+  border: 0.02em solid #01d031;
+  background: #4fcb72;
+}
+
+.flash-msg.error {
+  border: 0.02em solid #c80000;
+  background: #da5555;
 }
