--- a/src/templates/reg.html
+++ b/src/templates/reg.html
@@ -1,39 +1,55 @@
-{% extends 'base.tpl' %}
+{% extends 'base.tpl' %} 
 
-{% block content %}
+{% block content %} 
 {{ super() }}
 
-  <div class="text-center">
-    <h3> {{ msg }} </h3>
+<div class="text-center">
+  <h3>{{ msg }}</h3>
+</div>
+
+<form action="/reg" class="reg-form" method="post">
+  <div class="form-group my-3">
+    <label for="input_usernmae">Username</label>
+    <input
+      type="text"
+      name="username"
+      class="form-control form-input"
+      placeholder="Username"
+      id="input_usernmae"
+
+      {% if username %}
+      value="{{ username }}"
+      {% endif %}
+    />
   </div>
 
-  <form action="/reg" class="reg-form">
-    <div class="form-group my-3">
-      <label for="input_usernmae">Username</label>
-      <input 
-        type="text" 
-        class="form-control form-input" 
-        placeholder="Username" 
-        id="input_usernmae"
-      >
-    </div>
+  <div class="form-group my-3">
+    <label for="input_pwd">Password</label>
+    <input
+      type="password"
+      name="pwd"
+      class="form-control form-input"
+      placeholder="Password"
+      id="input_pwd"
+      
+      {% if pwd %}
+      value="{{ pwd }}"
+      {% endif %}
+    />
+    <small class="form-text text-muted small-pwd">
+      The password must consist of at least 3 characters.
+    </small>
+  </div>
 
-    <div class="form-group my-3">
-      <label for="input_pwd">Password</label>
-      <input 
-        type="password" 
-        class="form-control form-input" 
-        placeholder="Password" 
-        id="input_pwd"
-      >
-      <small class="form-text text-muted">
-        The password must consist of at least 3 characters.
-      </small>
-    </div>
+  <div class="form-group text-center my-3">
+    <button type="submit" class="btn btn-primary sign-in-btn">Sign up</button>
+  </div>
+</form>
 
-    <div class="form-group my-3">
-      <button type="submit" class="btn btn-primary">Sign up</button>
-    </div>
-  </form>
+<div class="my-5">
+  {% for cat, msg in get_flashed_messages(True) %}
+    <div class="flash-msg {{ cat }} my-1"> {{ msg }} </div>
+  {% endfor %}
+</div>
 
 {% endblock %}
