--- a/src/templates/reg.html
+++ b/src/templates/reg.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="form-group text-center my-3">
-    <button type="submit" class="btn btn-primary sign-in-btn">Sign up</button>
+    <button type="submit" class="btn btn-primary long-btn">Sign up</button>
   </div>
 </form>
 
