--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,34 +1,19 @@
-{% extends 'base.tpl' %}
-
-{% block content %}
-{{ super() }}
-
-{% if title %}
-<h1> {{ title }} </h1>
+{% extends 'base.tpl' %} {% block content %} {{ super() }} {% if title %}
+<h1>{{ title }}</h1>
 {% else %}
-<h1> Default title </h1>
+<h1>Default title</h1>
 {% endif %}
 
-{% if msg %}
-<div class="my-3">
-  <h3>{{ msg }}</h3>
+<div class="text-center my-3">
+  <button type="button" class="btn btn-primary long-btn" onclick="to_reg()">
+    Go to reg :)
+  </button>
 </div>
-{% endif %} 
 
-{% if arr %}
-<div class="my-3">
-  <ul>
-    {% for el in arr %}
-    <li>{{ el }}</li>
-    {% endfor %}
-  </ul>
+<hr />
+
+{% for user in users %}
+<div class="my-2 user-coard">
+  <p>User: {% for k, v in user %} {{ k }}: {{ v }} | {% endfor %}</p>
 </div>
-{% endif %}
-
-<button 
-  type="button" 
-  class="btn btn-primary"
-  onclick="to_reg()"
->Go to reg :)</button>
-
-{% endblock %}
+{% endfor %} {% endblock %}
