--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,8 +1,15 @@
-{% extends 'base.tpl' %} {% block content %} {{ super() }} {% if title %}
-<h1>{{ title }}</h1>
-{% else %}
-<h1>Default title</h1>
-{% endif %}
+{% extends 'base.tpl' %} 
+
+{% block content %} 
+{{ super() }} 
+
+<div class="text-center">
+  {% if title %}
+  <h1>{{ title }}</h1>
+  {% else %}
+  <h1>Default title</h1>
+  {% endif %}
+</div>
 
 <div class="text-center my-3">
   <button
